operand button fix

--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
             <!-- <input type="text"> -->
             <div class="output">
                 <div data-previous-operand class="previous-operand">
-
+                    0
                 </div>
-                <div data-current-operand class="previous-current">
+                <div data-current-operand class="current-operand">
 
                 </div>
             </div>
             <div class="btn">
-                <button data-all-clear>
-                    AC
-                </button>
+                <button data-all-clear>AC</button>
                 <button data-delete>
                     DEL
                 </button>
@@ -47,7 +45,7 @@
                     9
                 </button>
                 <button data-operation>
-                    ×
+                    *
                 </button>
                 <button data-number>
                     4
